[gd_scene load_steps=7 format=3 uid="uid://dgpjxoygnvyy4"]

[ext_resource type="Script" path="res://scripts/Player/Player.gd" id="1_1fhis"]
[ext_resource type="Texture2D" uid="uid://460c7iim6k8n" path="res://textures/npc/red_wee_lass_fr.png" id="2_ov3c0"]
[ext_resource type="StyleBox" uid="uid://c0xr3v5mog7do" path="res://textures/bars/bar_back.tres" id="3_io2rr"]
[ext_resource type="StyleBox" uid="uid://c7o5ikqr3p4ce" path="res://textures/bars/bar_health.tres" id="4_gffqp"]
[ext_resource type="StyleBox" uid="uid://b1dji7k0thdwb" path="res://textures/bars/bar_stamina.tres" id="5_ciy6o"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_euj4i"]

[node name="Player" type="CharacterBody3D" groups=["Player"]]
disable_mode = 2
floor_max_angle = 0.802851
script = ExtResource("1_1fhis")

[node name="Body" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_euj4i")

[node name="Sprite3D" type="Sprite3D" parent="."]
transform = Transform3D(4, 0, 0, 0, 3.83508, -1.13673, 0, 1.13673, 3.83508, 0, 0.102226, 0.144711)
texture_filter = 2
texture = ExtResource("2_ov3c0")

[node name="helmet" type="Sprite3D" parent="."]
transform = Transform3D(4, 0, 0, 0, 3.83508, -1.13673, 0, 1.13673, 3.83508, 0, 0.102226, 0.143952)
texture_filter = 2

[node name="Head_origin_point" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="Rotation_helper" type="Node3D" parent="Head_origin_point"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.6, 0)

[node name="Camera3D" type="Camera3D" parent="Head_origin_point/Rotation_helper"]

[node name="Health_bar" type="ProgressBar" parent="Head_origin_point/Rotation_helper/Camera3D"]
offset_top = 5.0
offset_right = 350.0
offset_bottom = 25.0
theme_override_styles/background = ExtResource("3_io2rr")
theme_override_styles/fill = ExtResource("4_gffqp")
show_percentage = false

[node name="Stamina_bar" type="ProgressBar" parent="Head_origin_point/Rotation_helper/Camera3D"]
offset_top = 28.0
offset_right = 350.0
offset_bottom = 48.0
theme_override_styles/background = ExtResource("3_io2rr")
theme_override_styles/fill = ExtResource("5_ciy6o")
show_percentage = false

[node name="RayCast3D" type="RayCast3D" parent="Head_origin_point/Rotation_helper/Camera3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -0.482621)
collide_with_areas = true

[node name="Interact_ui" type="CanvasLayer" parent="Head_origin_point/Rotation_helper/Camera3D"]
visible = false

[node name="ColorRect" type="ColorRect" parent="Head_origin_point/Rotation_helper/Camera3D/Interact_ui"]
anchors_preset = -1
anchor_left = 0.384983
anchor_top = 0.938272
anchor_right = 0.615017
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0, 0.737255, 0.345098, 1)
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Head_origin_point/Rotation_helper/Camera3D/Interact_ui/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.218868
anchor_top = 0.2125
anchor_right = 0.781132
anchor_bottom = 0.7875
grow_horizontal = 2
grow_vertical = 2
text = "Press \"E\" to interact"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="I_Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
